<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.baseballscorekeeper.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:padding="16dp"
                    android:text="@string/team_A"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="san-serif-light"
                    android:gravity="center_horizontal"
                    android:paddingBottom="24dp"
                    android:text="@string/zero"
                    android:textColor="@android:color/black"
                    android:textSize="56sp" />

                <Button
                    android:id="@+id/add_one_team_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addPoint"
                    android:text="@string/plus_one_point" />

                <Button
                    android:id="@+id/add_two_team_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addPoint"
                    android:text="@string/plus_two_point" />


            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:padding="16dp"
                    android:text="@string/team_B"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="san-serif-light"
                    android:gravity="center_horizontal"
                    android:paddingBottom="24dp"
                    android:text="@string/zero"
                    android:textColor="@android:color/black"
                    android:textSize="56sp" />

                <Button
                    android:id="@+id/add_one_team_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addPoint"
                    android:text="@string/plus_one_point" />

                <Button
                    android:id="@+id/add_two_team_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addPoint"
                    android:text="@string/plus_two_point" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="24dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:text="@string/ball"
                android:textAllCaps="true"
                android:textColor="#009688"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/ball"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:gravity="center_horizontal"
                android:text="@string/zero"
                android:textColor="#616161"
                android:textSize="30sp" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginRight="24dp"
                android:layout_weight="0"
                android:onClick="addOneForBall"
                android:text="@string/plus" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="24dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:text="@string/strike"
                android:textAllCaps="true"
                android:textColor="#2196F3"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/strike"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:gravity="center_horizontal"
                android:text="@string/zero"
                android:textColor="#616161"
                android:textSize="30sp" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginRight="24dp"
                android:layout_weight="0"
                android:onClick="addOneForStrike"
                android:text="@string/plus" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="24dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:text="@string/out"
                android:textAllCaps="true"
                android:textColor="#F44336"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/out"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:gravity="center_horizontal"
                android:text="@string/zero"
                android:textColor="#616161"
                android:textSize="30sp" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginRight="24dp"
                android:layout_weight="0"
                android:onClick="addOneForOut"
                android:text="@string/plus" />


        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:onClick="resetScore"
            android:text="@string/reset" />

    </LinearLayout>


</ScrollView>
